# StreamoutProcessor

./: .gitignore  CMakeLists.txt  GangaCheckerMoveFileOnGrid.py  README.md  StreamoutProcessor.xml  checkRecEvent.py  config_streamout.py  dbUtils.py  dump.py  generateEnv.sh  marlin.py  pyMarlin.py  run_marlin.py  streamout.py
config/: StreamoutProcessor.xml  config_streamout.py  generateEnv.sh
include/: DIF.h  DIFReadoutConstant.h  DIFUnpacker.h  StreamoutProcessor.h
python/: GangaCheckerMoveFileOnGrid.py  marlin.py  pyMarlin.py
script/: StreamoutProcessor.py
src/: DIF.cc  DIFUnpacker.cc  StreamoutProcessor.cc
steer/: runStreamout.sh  runStreamoutGrid.py  runStreamoutProcessor.sh  streamout.py
